--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="wrapper">
       <div class="container">
         <div class="note">
-          <p><b>Note -</b>  below mantion Skills and Projects are Dummy(for Designing purpose)</p>
+          <p><b>Note -</b>  below mention Skills and Projects are Dummy(for Designing purpose)</p>
         </div>
         <div class="navbar">
           <div class="log-container">
