--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="navbar">
           <div class="log-container">
-            <img src="B.jpg" class="logo" alt="" />
+            <img src="./images/userAsset/B.jpg" class="logo" alt="" />
             <div class="logo-text">havishy verma</div>
           </div>
 
@@ -29,7 +29,7 @@
         <div class="hero">
           <div class="hero-left">
             <div class="hero-left-heading">Hi! Bhavishy Verma</div>
-            <div class="hero-left-subheading hero-left-heading">
+            <div class="hero-left-subheading ">
               I am a <span class="role"></span>
             </div>
             <div class="hero-left-description">
@@ -40,29 +40,31 @@
           </div>
 
           <div class="hero-right">
+           <div class="white-page">
             <div class="absolute icons icons-dots">
-              <img src="dots.png" alt="" />
+              <img src="./images/userAsset/dots.png" alt="" />
             </div>
 
             <div class="absolute icons icons-cube">
-              <img src="cube.png" alt="" />
+              <img src="./images/userAsset/cube.png" alt="" />
             </div>
 
             <div class="absolute icons icons-circle">
-              <img src="circle.png" alt="" />
+              <img src="./images/userAsset/circle.png" alt="" />
             </div>
 
             <div class="absolute icons icons-zigzak">
-              <img src="zigzags.png" alt="" />
+              <img src="./images/userAsset/zigzags.png" alt="" />
             </div>
 
             <div class="absolute icons icons-plus">
-              <img src="plus.png" alt="" />
+              <img src="./images/userAsset/plus.png" alt="" />
             </div>
 
             <div class="bhavi">
-              <img id="bhavii" src="bhavi.jpg" alt="" />
+              <img id="bhavii" src="./images/userAsset/bhavi.jpg" alt="" />
             </div>
+           </div>
           </div>
         </div>
       </div>
@@ -72,22 +74,22 @@
         <h2 class="project-headings">Projects</h2>
         <div class="project-container">
           <div class="project-card" id="project1">
-            <img class="p" src="Project1.png" alt="">
+            <img class="p" src="images/projects/Project1.png" alt="">
             
             <div class="project-number project-number-right">01</div>
             <div class="project-content project-content-left">
 
                 <div class="project-skills-container">
-                    <img class="project-skill" src="HTML.png" alt="" />
-                    <img class="project-skill" src="CSS.png" alt="" />
-                    <img class="project-skill" src="Javascript.svg" alt="" />
-                    <img class="project-skill" src="Express.png" alt="" />
-                    <img class="project-skill" src="NextJsCircle.png" alt="" />
-                    <img class="project-skill" src="Tailwind.png" alt="" />
-                    <img class="project-skill" src="NodeJs.svg" alt="" />
-                    <img class="project-skill" src="MongoDB.svg" alt="" />
-                    <img class="project-skill" src="Redux.svg" alt="" />
-                    <img class="project-skill" src="Vercel.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                    <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                    <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                    <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                    <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                    <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                 </div>
 
                 <h2 class="project-heading">Tint & Orange</h2>
@@ -107,43 +109,43 @@
             </div>
         </div>
           <div class="project-card" id="project2">
-            <img class="p" src="Project2.png" alt="">
+            <img class="p" src="images/projects/Project2.png" alt="">
             <div class="project-number project-number-left">02</div>
             <div class="project-content project-content-right">
               <div class="project-skills-container">
                 <img
                   class="project-skill"
-                  src="HTML.png"
+                  src="./images/stack/HTML.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="CSS.png"
+                  src="./images/stack/CSS.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Javascript.svg"
+                  src="./images/stack/Javascript.svg"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="NextJsCircle.png"
+                  src="./images/stack/NextJsCircle.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Tailwind.png"
+                  src="./images/stack/Tailwind.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Redux.svg"
+                  src="./images/stack/Redux.svg"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Vercel.svg"
+                  src="./images/stack/Vercel.svg"
                   alt=""
                 />
               </div>
@@ -164,38 +166,38 @@
           </div>
 
           <div class="project-card" id="project3">
-            <img class="p" src="Project3.png" alt="">
+            <img class="p" src="images/projects/Project3.png" alt="">
             <div class="project-number project-number-right">03</div>
             <div class="project-content project-content-left">
               <div class="project-skills-container">
                 <img
                   class="project-skill"
-                  src="HTML.png"
+                  src="./images/stack/HTML.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="CSS.png"
+                  src="./images/stack/CSS.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Javascript.svg"
+                  src="./images/stack/Javascript.svg"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="NextJsCircle.png"
+                  src="./images/stack/NextJsCircle.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Tailwind.png"
+                  src="./images/stack/Tailwind.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Vercel.svg"
+                  src="./images/stack/Vercel.svg"
                   alt=""
                 />
               </div>
@@ -218,23 +220,23 @@
           </div>
 
           <div class="project-card" id="project4">
-            <img class="p" src="Project4.png" alt="">
+            <img class="p" src="images/projects/Project4.png" alt="">
             <div class="project-number project-number-left">04</div>
             <div class="project-content project-content-right">
               <div class="project-skill-container">
                 <img
                   class="project-skill"
-                  src="NextJsCircle.png"
+                  src="./images/stack/NextJsCircle.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Tailwind.png"
+                  src="./images/stack/Tailwind.png"
                   alt=""
                 />
                 <img
                   class="project-skill"
-                  src="Vercel.svg"
+                  src="./images/stack/Vercel.svg"
                   alt=""
                 />
               </div>
@@ -289,28 +291,28 @@
         </div>
 
         <div class="skill-right-container">
-          <img src="blob vector.png" class="blob-style" alt="" />
+          <img src="./images/userAsset/blob vector.png" class="blob-style" alt="" />
 
-            <img src="HTML.png" alt="" class="skills-logo" />
-            <img src="CSS.png" alt="" class="skills-logo" />
-            <img src="Javascript.svg" alt="" class="skills-logo" />
-            <img src="React.png" alt="" class="skills-logo" />
-            <img src="NodeJs.svg" alt="" class="skills-logo" />
-            <img src="Next.svg" alt="" class="skills-logo" />
-            <img src="Redux.svg" alt="" class="skills-logo" />
-            <img src="Tailwind.png" alt="" class="skills-logo" />
-            <img src="Bootstrap.svg" alt="" class="skills-logo" />
-            <img src="MaterialUI.svg" alt="" class="skills-logo" />
-            <img src="Express.png" alt="" class="skills-logo" />
-            <img src="Git.svg" alt="" class="skills-logo" />
-            <img src="Github.svg" alt="" class="skills-logo" />
-            <img src="Graphql.svg" alt="" class="skills-logo" />
-            <img src="MongoDB.svg" alt="" class="skills-logo" />
-            <img src="Vercel.svg" alt="" class="skills-logo" />
-            <img src="ChartJs.svg" alt="" class="skills-logo" />
-            <img src="Bash.svg" alt="" class="skills-logo" />
-            <img src="Docker.svg" alt="" class="skills-logo" />
-            <img src="K8s.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/HTML.png" alt="" class="skills-logo" />
+            <img src="./images/stack/CSS.png" alt="" class="skills-logo" />
+            <img src="./images/stack/Javascript.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/React.png" alt="" class="skills-logo" />
+            <img src="./images/stack/NodeJs.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Next.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Redux.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Tailwind.png" alt="" class="skills-logo" />
+            <img src="./images/stack/Bootstrap.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/MaterialUI.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Express.png" alt="" class="skills-logo" />
+            <img src="./images/stack/Git.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Github.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Graphql.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/MongoDB.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Vercel.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/ChartJs.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Bash.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/Docker.svg" alt="" class="skills-logo" />
+            <img src="./images/stack/K8s.svg" alt="" class="skills-logo" />
 
 
         </div>
@@ -412,7 +414,7 @@
     <script>
       var typeData = new Typed(".role", {
         strings: [
-          "Full Stack Developer",
+          
           "Web Developer",
           "UI-UX Designer",
           "Backend Developer",
@@ -420,7 +422,7 @@
         ],
         loop: true,
         typeSpeed: 100,
-        backSpeed: 80,
+        backSpeed: 800,
         backDelay: 1000,
       });
     </script>
