--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </div>
 
         <div class="skill-right-container">
-          <img src="./images/userAsset/blob vector.png" class="blob-style" alt="" />
+          <img src="blob vector.png" class="blob-style" alt="" />
 
             <img src="HTML.png" alt="" class="skills-logo" />
             <img src="CSS.png" alt="" class="skills-logo" />
