--- a/index.html
+++ b/index.html
@@ -297,14 +297,14 @@
               placeholder="Enter your subject"
             >
             </textarea>
-            <div class="botton btn-project" id="sumbit-btn">Send Message</div>
           </div>
+          <div class="botton btn-project l-btn" id="sumbit-btn">Send Message</div>
         </div>
       </div>
 
       <footer>
         <div class="footer-container" id="contactme">
-          <div class="faded-bhavi">Bhavi</div>
+          
 
           <div class="foot-right">
             <div class="link-wrapper">
@@ -320,14 +320,15 @@
             </div>
 
             <div class="icon-wrapper">
-              <i class="fa-brands fa-linkedin icon"></i>
-              <i class="fa-brands fa-github icon"></i>
-              <i class="fa-brands fa-twitter icon"></i>
-              <i class="fa-brands fa-instagram icon"></i>
-              <i class="fa-regular fa-envelope icon"></i>
+              <a href="https://www.linkedin.com/in/vermabhavi/"><i class="fa-brands fa-linkedin icon"></i></a> 
+             <a href="https://github.com/bhavishya556"> <i class="fa-brands fa-github icon"></i> </a>
+              
+             <a href="https://www.instagram.com/bhavi__verma/"> <i class="fa-brands fa-instagram icon"></i></a>
+             <a href="mailto: vermabhavi7890@gmail.com"> <i class="fa-regular fa-envelope icon"></i> </a>
             </div>
           </div>
         </div>
+        <div class="faded-bhavi">Bhavi</div>
       </footer>
     </div>
 
